[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-landclaim"
version = "0.1.3"   # bump so Endstone reloads clean
description = "My first Python plugin for Endstone servers!"
requires-python = ">=3.10"
dependencies = []

[project.entry-points."endstone"]
landclaim = "endstone_landclaim.index_plugin:MyPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_landclaim"]
